--- a/module19_homework/sass/base.scss
+++ b/module19_homework/sass/base.scss
@@ -205,15 +205,18 @@ h2 {
     padding-top: 84px;
     line-height: 10px;
   }
-  p {
+  span {
     font-size: 24px;
     text-align: center;
     line-height: 23px;
     padding-bottom: 60px;
+    padding-top: 30px;
     @include breakpoint (medium) {
       font-size: 16px;
       width: 80%;
-      padding-bottom: 10px;
+      padding-top: 10px;
+      padding-bottom: 30px;
+
     }
   }
   &-rect {
@@ -262,19 +265,22 @@ h2 {
     overflow: hidden;
     max-height: 0;
     transition: all 0.2s ease-out;
+    font-size: 20px;
     &.is-active {
       margin-top: 20px;
       margin-bottom: 40px;
       @include breakpoint (medium) {
         margin-top: 10px;
         margin-bottom: 30px;
+        padding-left: calc(10% + 10px);
       }
     }
     &:last-child.is-active {
       margin-bottom: 20px;
     }
     @include breakpoint (medium) {
-      width: 70%;
+      width: 60%;
+      font-size: 14px;
     }
   }
 
